[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Explosions/Ex-03-Pawn.gd" type="Script" id=1]
[ext_resource path="res://Scenes/FX/FX-05-Robit-Wreckage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Explosions/Parts/EX_Part_Damage_Area_08.tscn" type="PackedScene" id=5]

[node name="Ex-03-Pawn" type="Node2D"]
z_index = -3
script = ExtResource( 1 )
pawn_part = ExtResource( 2 )
trauma = 2.0

[node name="EX_Part_Damage_Area" parent="." instance=ExtResource( 5 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
